--- a/src/main/webapp/app/components/account/tags/TagsView.html
+++ b/src/main/webapp/app/components/account/tags/TagsView.html
@@ -7,7 +7,7 @@
                         <a ui-sref="account.tags" translate="tatami.account.tags.myTags"></a>
                     </li>
                     <li ng-class="{ 'active': $state.current.name === 'account.tags.recommended' }">
-                        <a ui-sref="account.tags.recommended" translate="tatami.account.tags.trends"></a>
+                        <a ui-sref="account.tags.recommended" translate="tatami.account.tags.trending"></a>
                     </li>
                     <li ng-class="{ 'active': $state.current.name === 'account.tags.search' }">
                         <a ui-sref="account.tags.search" translate="tatami.account.tags.search"></a>
