--- a/src/main/webapp/app/components/home/post/PostView.html
+++ b/src/main/webapp/app/components/home/post/PostView.html
@@ -10,10 +10,10 @@
         </a>
         <fieldset ng-if="!current.preview" class="edit-tatam row-fluid">
             <!-- The popover doesn't quite work yet, ideally the popover will show when current.contentEmpty is true -->
-            <textarea ng-trim="false" ng-if="!current.reply" popover="{{ 'tatami.home.post.content.mandatory' | translate}}" popover-placement="bottom" popover-trigger="current.contentEmpty" ng-model="status.content" ng-change="statusChange(status.content)" placeholder="{{ 'tatami.home.post.update' | translate}}" maxlength="750" rows="5" required="required"></textarea>
-            <textarea ng-trim="false" ng-if="current.reply" popover="{{ 'tatami.home.post.content.mandatory' | translate}}" popover-placement="bottom" popover-trigger="current.contentEmpty" ng-model="status.content" ng-change="statusChange(status.content)" maxlength="750" rows="5" required="required"></textarea>
+            <textarea ng-if="!current.reply" ng-trim="false" popover="{{ 'tatami.home.post.content.mandatory' | translate}}" popover-placement="bottom" popover-trigger="current.contentEmpty" ng-model="status.content" ng-change="statusChange(status.content)" placeholder="{{ 'tatami.home.post.update' | translate}}" maxlength="750" rows="5" required="required"></textarea>
+            <textarea ng-if="current.reply" ng-trim="false" popover="{{ 'tatami.home.post.content.mandatory' | translate}}" popover-placement="bottom" popover-trigger="current.contentEmpty" ng-model="status.content" ng-change="statusChange(status.content)" maxlength="750" rows="5" required="required"></textarea>
             <div>
-                {{'tatami.home.post.characters.left' | translate}} <span class="countstatus badge">{{ charCount-status.content.length }}</span>
+                {{ 'tatami.home.post.characters.left' | translate }} <span class="countstatus badge">{{ charCount-status.content.length }}</span>
                 <a id="markdownBasics" href="https://help.github.com/articles/markdown-basics/" translate="tatami.home.post.markdown"></a>
             </div>
         </fieldset>
@@ -24,37 +24,48 @@
             <legend translate="tatami.home.post.reply">
             </legend>
             <!-- Start of reply section -->
-            <div ng-show="current.reply" style="display: block;" class="tatam pointer discussion tatam-border-lr tatam-hover tatam-id-{{ currentStatus.statusId }}" ng-show="false">
-                <!--<div id="before"></div>-->
-                <div id="current" ng-mouseenter="showButtonRow = true" ng-mouseleave="showButtonRow = false" ng-class="{ 'favorite' : currentStatus.favorite, 'share' : currentStatus.shareByMe }">
+            <div ng-show="current.reply" class="tatam pointer discussion tatam-border-lr tatam-hover" style="display: block;">
+                <div id="current" ng-mouseenter="showButtonRow = true" ng-mouseleave="showButtonRow = false" ng-class="{ 'favorite': currentStatus.favorite, 'share': currentStatus.shareByMe, 'both': currentStatus.favorite && currentStatus.shareByMe }">
+                <!-- Make shareByMe=false for MENTION_FRIEND type statuses -->
                     <div class="pull-left background-image-fffix statusitem-img">
-                        <div class="img img-rounded img-medium" ng-style="{ 'background-image': currentStatus.avatar=='' ? 'url(/img/default_image_profile.png)' : 'url(/tatami/avatar/' + currentStatus.avatar + '/photo.jpg)' }"></div>
+                        <a ui-sref="home.profile({ username: currentStatus.username })">
+                            <div class="img img-rounded img-medium" ng-style="{ 'background-image': 'url(' + currentStatus.avatarURL + ')' }"></div>
+                        </a>
                     </div>
                     <div id="status-content-container">
-                        <div class="pull-right text-right">
-                            <abbr title="{{ currentStatus.statusDate | amDateFormat:'h:mm A - D MMM YYYY'}}" am-time-ago="currentStatus.statusDate"></abbr>
-                            <!-- Make status abbr month and day display after 24h have passed? -->
-                        </div>
                         <h5 class="statusitem-name">
-                            <strong><a ui-sref="home.profile({ username: currentStatus.username })">{{ currentStatus.firstName + ' ' + currentStatus.lastName }}</a></strong>
-                            <small><a ui-sref="home.profile({ username: currentStatus.username })">@{{ currentStatus.username }}</a></small>
+                            <span ng-if="currentStatus.type == 'MENTION_SHARE'" class="glyphicon glyphicon-retweet">&nbsp;</span>
+                            <span ng-if="currentStatus.type == 'MENTION_FRIEND'" class="glyphicon glyphicon-user">&nbsp;</span>
+                            <a ui-sref="home.profile({ username: currentStatus.username })">
+                                <strong>{{ currentStatus.firstName + ' ' + currentStatus.lastName }}</strong>
+                                <small>@{{ currentStatus.username }}</small>
+                            </a>
+                            <span ng-if="currentStatus.type == 'MENTION_SHARE'" translate="tatami.home.status.shared"></span>
+                            <span ng-if="currentStatus.type == 'MENTION_FRIEND'" translate="tatami.home.status.followed"></span>
+                            <small> · </small>
+                            <a ui-sref="home.status({ status: currentStatus.statusId })">
+                                <small ng-if="!isOneDayOrMore(currentStatus.statusDate)" title="{{ currentStatus.statusDate | amDateFormat:'h:mm A - D MMM YYYY'}}" am-time-ago="currentStatus.statusDate"></small>
+                                <small ng-if="isOneDayOrMore(currentStatus.statusDate)" title="{{ currentStatus.statusDate | amDateFormat:'h:mm A - D MMM YYYY'}}">{{ currentStatus.statusDate | amDateFormat:'MMM D'}}</small>
+                            </a>
+                            <!-- Replace hover title with hover bubble -->
                         </h5>
-                        <div class="markdown" ng-bind-html="currentStatus.content | emoticon | markdown"></div>
+                        
+                        <div class="markdown" ng-class="{ 'mention-share': currentStatus.type == 'MENTION_SHARE' }" ng-bind-html="currentStatus.content | emoticon | markdown"></div>
 
-                        <small ng-show="currentStatus.groupId">
+                        <small ng-if="currentStatus.groupId">
                             <a class="label" ng-class="currentStatus.publicGroup ? 'label-info' : 'label-warning'" ui-sref="home.group({ group: currentStatus.groupId })">
-                                {{ currentStatus.groupName }}
+                            {{ currentStatus.groupName }}
                             </a>
                             <br>
                         </small>
 
-                        <small ng-show="currentStatus.statusPrivate">
+                        <small ng-if="currentStatus.statusPrivate">
                             <span class="glyphicon glyphicon-lock"></span>
                             <span translate="tatami.home.status.private"></span>
                             <br>
                         </small>
 
-                        <small ng-show="currentStatus.replyTo">
+                        <small ng-if="currentStatus.replyTo">
                             <span class="glyphicon glyphicon-share-alt"></span>
                             <span translate="tatami.home.status.replyTo"></span>
                             <a ui-sref="home.status({ status: currentStatus.replyTo })">@{{ currentStatus.replyToUsername }}</a>
@@ -64,55 +75,17 @@
                         <small>
                             <div class="attachments">
                                 <div>
-                                    <span ng-repeat="attachment in status.attachments">
+                                    <span ng-repeat="attachment in currentStatus.attachments">
                                     <a href="/tatami/file/{{ attachment.attachmentId }}/{{ attachment.filename }}" class="btn-link status-action" target="_blank">
-                                        <i class="glyphicon glyphicon-file"></i> {{ attachment.filename }}
+                                    <i class="glyphicon glyphicon-file"></i> {{ attachment.filename }}
                                     </a>
                                     </span>
                                 </div>
                             </div>
-                            <div id="share">
-                            </div>
                         </small>
                     </div>
-
-                    <div id="geolocalizationInStatus">
-                    </div>
-                    <div id="preview">
-                    </div>
-
-                    <div ng-style="{ visibility : showButtonRow ? 'visible' : 'hidden' }" style="display: block;" id="buttons" class="mediumHeight little-marge-top">
-                        <div>
-                            <small class="statusitem-footer">
-                                <a ui-sref="home.status({ status: currentStatus.statusId })" class="btn-link status-action button-ios">
-                                    <i class="glyphicon glyphicon-eye-open"></i>
-                                    <span translate="tatami.home.status.view"></span>
-                                </a>
-                                <!--
-                                <button class="btn-link status-action status-action-reply button-ios" ng-controller="StatusManagerController">
-                                    <i class="glyphicon glyphicon-comment"></i>
-                                    <span translate="tatami.home.status.reply"></span>
-                                </button>
-                                <button ng-if="status.username != profile.username && !status.shareByMe" class="btn-link status-action status-action-share button-ios">
-                                    <i class="glyphicon glyphicon-retweet"></i>
-                                    <span translate="tatami.home.post.share"></span>
-                                </button>
-                                <button class="btn-link status-action status-action-favorite button-ios">
-                                    <i class="glyphicon glyphicon-star"></i>
-                                    <span translate="tatami.home.post.favorite"></span>
-                                </button>
-                                <button ng-if="status.username == profile.username" class="btn-link status-action status-action-delete button-ios">
-                                    <i class="glyphicon glyphicon-trash"></i>
-                                    <span translate="tatami.home.post.delete"></span>
-                                </button>
-                                -->
-                            </small>
-                        </div>
-                    </div>
                 </div>
-                <!--<div id="after"></div>-->
             </div>
-
         </fieldset>
         <fieldset class="row-fluid">
             <legend translate="tatami.home.post.options">
