now indicate when status type == SHARE

--- a/src/main/webapp/app/components/home/post/PostView.html
+++ b/src/main/webapp/app/components/home/post/PostView.html
@@ -40,7 +40,7 @@
                                 <strong>{{ currentStatus.firstName + ' ' + currentStatus.lastName }}</strong>
                                 <small>@{{ currentStatus.username }}</small>
                             </a>
-                            <span ng-if="currentStatus.type == 'MENTION_SHARE'" translate="tatami.home.status.shared"></span>
+                            <span ng-if="currentStatus.type == 'MENTION_SHARE'" translate="tatami.home.status.sharedYour"></span>
                             <span ng-if="currentStatus.type == 'MENTION_FRIEND'" translate="tatami.home.status.followed"></span>
                             <small> · </small>
                             <!-- Replace hover title with hover bubble -->
