added company wall view

--- a/src/main/webapp/app/components/home/timeline/TimelineHeaderView.html
+++ b/src/main/webapp/app/components/home/timeline/TimelineHeaderView.html
@@ -25,6 +25,7 @@
                 <span ng-if="$state.current.name == 'home.timeline'" translate="tatami.home.timeline"></span>
                 <span ng-if="$state.current.name == 'home.mentions'" translate="tatami.home.mentions"></span>
                 <span ng-if="$state.current.name == 'home.favorites'" translate="tatami.home.favorites"></span>
+                <span ng-if="$state.current.name == 'home.company'" translate="tatami.home.companyWall"></span>
             </h3>
         </div>
     </section>
