bolded timeline header titles

--- a/src/main/webapp/app/components/home/timeline/TimelineHeaderView.html
+++ b/src/main/webapp/app/components/home/timeline/TimelineHeaderView.html
@@ -22,10 +22,10 @@
     <section class="tatams-content tatams-margin">
         <div class="tatams-content-title">
             <h3>
-                <span ng-if="$state.current.name == 'home.timeline'" translate="tatami.home.timeline"></span>
-                <span ng-if="$state.current.name == 'home.mentions'" translate="tatami.home.mentions"></span>
-                <span ng-if="$state.current.name == 'home.favorites'" translate="tatami.home.favorites"></span>
-                <span ng-if="$state.current.name == 'home.company'" translate="tatami.home.companyWall"></span>
+                <strong ng-if="$state.current.name == 'home.timeline'" translate="tatami.home.timeline"></strong>
+                <strong ng-if="$state.current.name == 'home.mentions'" translate="tatami.home.mentions"></strong>
+                <strong ng-if="$state.current.name == 'home.favorites'" translate="tatami.home.favorites"></strong>
+                <strong ng-if="$state.current.name == 'home.company'" translate="tatami.home.companyWall"></strong>
             </h3>
         </div>
     </section>
