--- a/src/main/webapp/app/components/account/tags/TagsView.html
+++ b/src/main/webapp/app/components/account/tags/TagsView.html
@@ -31,17 +31,12 @@
                                 <td>
                                     <a href="/tatami/home/#/tags/{{ tag.name }}" title="{{ tag.name }}">#{{ tag.name }}</a>
                                 </td>
-                                <td class="follow" ng-show="!tag.followed">
-                                    <a class="btn-title toggleTag pull-right label labelSizeNormal  " ng-click="follow(tag)">
-                                        <span class="glyphicon glyphicon-plus">
-                                            <span class="hidden-phone" translate="tatami.account.tags.follow"></span>
-                                        </span>
-                                    </a>
-                                </td>
-                                <td class="follow" ng-show="tag.followed">
-                                    <a class="btn-title toggleTag pull-right label labelSizeNormal label-info " ng-click="follow(tag)">
-                                        <span class="glyphicon glyphicon-minus">
-                                            <span class="hidden-phone" translate="tatami.account.tags.following"></span>
+                                <td class="follow">
+                                    <a ng-click="follow(tag)" ng-init="hover = false" ng-mouseenter="hover = true" ng-mouseleave="hover = false" class="btn-title toggleTag pull-right label labelSizeNormal">
+                                        <span class="glyphicon" ng-class="tag.followed ? 'glyphicon-minus' : 'glyphicon-plus'">
+                                            <span ng-if="!tag.followed" class="hidden-phone" translate="tatami.account.tags.follow"></span>
+                                            <span ng-if="tag.followed && !hover" class="hidden-phone" translate="tatami.account.tags.following"></span>
+                                            <span ng-if="tag.followed && hover" class="hidden-phone" translate="tatami.account.tags.unfollow"></span>
                                         </span>
                                     </a>
                                 </td>
