--- a/src/main/webapp/app/components/home/tag/TagHeaderView.html
+++ b/src/main/webapp/app/components/home/tag/TagHeaderView.html
@@ -11,10 +11,11 @@
         <div class="tatams-content-title">
             <h3>
                 <strong ng-if="$state.current.name == 'home.tag'">#{{ $stateParams.tag }}</strong>
-                <a class="btn-title toggleTag pull-right label" ng-class="{ 'label-info': tag.followed }">
+                <a ng-click="followTag(tag)" ng-init="hover = false" ng-mouseenter="hover = true" ng-mouseleave="hover = false" class="btn-title toggleTag pull-right label" ng-class="{ 'label-danger': tag.followed && hover, 'label-info': tag.followed && !hover }">
                     <span class="glyphicon" ng-class="tag.followed ? 'glyphicon-minus' : 'glyphicon-plus'">
-                        <span ng-if="!tag.followed" ng-click="followTag()" class="hidden-phone" translate="tatami.home.tag.follow"></span>
-                        <span ng-if="tag.followed" ng-click="followTag()" class="hidden-phone" translate="tatami.home.tag.following"></span>
+                        <span ng-if="!tag.followed" class="hidden-phone" translate="tatami.home.tag.follow"></span>
+                        <span ng-if="tag.followed && !hover" class="hidden-phone" translate="tatami.home.tag.following"></span>
+                        <span ng-if="tag.followed && hover" class="hidden-phone" translate="tatami.home.tag.unfollow"></span>
                     </span>
                 </a>
             </h3>
