File upload in post modal works except for a few problems. Limitation so far: Unable to drag multiple files at a time, can only upload by dragging a file, not clicking it. However, we can successfully post the files uploaded

--- a/src/main/webapp/app/components/account/profile/ProfileView.html
+++ b/src/main/webapp/app/components/account/profile/ProfileView.html
@@ -8,9 +8,11 @@
                     <div class="control-group dashed">
                         <label class="control-label"></label>
                         <div class="controls">
-                            <div id="updateAvatar" class="dropzone well">
+                            <div class="dropzone well">
                                 {{ 'tatami.account.profile.dropPhoto' | translate }}
+                                <!--
                                 <input id="avatarFile" type="file" name="uploadFile" data-url="/tatami/rest/fileupload/avatar">
+                                -->
                             </div>
                             <div class="attachmentBar progress progress-striped active" style="display: none;">
                                 <div class="bar progress-bar progress-bar-info" style="width: 0%;"></div>
