changed some home tab icons

--- a/src/main/webapp/app/components/home/timeline/TimelineHeaderView.html
+++ b/src/main/webapp/app/components/home/timeline/TimelineHeaderView.html
@@ -8,13 +8,13 @@
         </li>
         <li ui-sref-active="active">
             <a ui-sref="home.home.mentions">
-            <i class="glyphicon glyphicon-user"></i>
+            <i class="glyphicon glyphicon-comment"></i>
             <span translate="tatami.home.mentions"></span>
             </a>
         </li>
         <li ui-sref-active="active">
             <a ui-sref="home.home.favorites">
-            <i class="glyphicon glyphicon-star"></i>
+            <i class="glyphicon glyphicon-heart"></i>
             <span translate="tatami.home.favorites"></span>
             </a>
         </li>
