changed favorite heart back to star

--- a/src/main/webapp/app/components/home/timeline/TimelineHeaderView.html
+++ b/src/main/webapp/app/components/home/timeline/TimelineHeaderView.html
@@ -14,7 +14,7 @@
         </li>
         <li ui-sref-active="active">
             <a ui-sref="home.home.favorites">
-            <i class="glyphicon glyphicon-heart"></i>
+            <i class="glyphicon glyphicon-star"></i>
             <span translate="tatami.home.favorites"></span>
             </a>
         </li>
